[package]
name = "helpful"
version = "0.1.0"
edition = "2021"
description = "A better anyhow::Error with a more descriptive error message"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/DenisGorbachev/yes-but-why"
repository = "https://github.com/DenisGorbachev/yes-but-why"
readme = "README.md"
keywords = ["error", "error-handling", "utils"]
categories = ["rust-patterns", "development-tools"]

[package.metadata.details]
title = "A better anyhow::Error with a more descriptive error message"
tagline = ""
summary = ""
announcement = ""

[dependencies]
tracing-error = "0.2.0"

[dev-dependencies]
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
clap = { version = "4.5.13", features = ["derive"] }
anyhow = "1.0.86"
